<resources>
    <string name="app_name">Safety Detector</string>
    <string name="hint_name">Name</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur magna tortor, semper eu feugiat eu, vehicula vitae lacus.</string>
    <string name="hint_company_name">Company Name</string>
    <string name="couriercompany">Courier Company </string>
    <string name="recive">Receiver </string>
    <string name="sender">Sender </string>
    <string name="hint_email">Email</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="hint_mobile_no">Mobile Number</string>
    <string name="hint_company_id">Company Id</string>
    <string name="hint_visitor_mobile_no">Visitor Mobile Number</string>
    <string name="hint_pin">Pin</string>
    <string name="emailId">EmailId</string>
    <string name="hint_password">Password</string>
    <string name="hint_designation">Designation</string>
    <string name="button">login</string>
    <string name="Update">Update Successfully</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="ok">OK</string>
    <string name="internet">Please check internet</string>
    <string name="reg">Register Successfully</string>
    <string name="progress">Loading Please wait</string>
    <string name="submit">Submit</string>
    <string name="vehiclenumber">Vehicle Number</string>
    <string name="vehiclePassNo">Vehicle PassNo</string>
    <string name="max_length">10</string>
    <string name="footer_text">App Developed by </string>
    <string name="footer_link">Scoto Systec</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">admin@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action">Action</string>
    <string name="manager">Manager</string>
    <string name="logout">Logout</string>
    <string name="checkLogout">Are you sure want to Logout?</string>
    <string name="sureContinue">Are you sure want to Continue?</string>
    <string name="deletelist">Are you sure want to Delete?</string>
    <string name="meetingEndUpdate">Meeting End Time is not marked. Are you sure you want to Continue?</string>
    <string name="confirmation">Confirmation</string>
    <string name="deleteAlertMember">Are you sure your want to delete this details?</string>
    <string name="Msg">Are you sure you want delete this ?</string>
    <string name="remove_all">All Device Details will be removed. Are Sure want to remove the Device ?</string>
    <string name="update">Update</string>
    <string name="updateVisitor">Update Visitor</string>
    <string name="deptDesignation">Department(Designation)</string>
    <string name="Designation">Designation</string>
    <string name="Department">Department</string>
    <string name="registerDate">Register Date</string>
    <string name="home">Home</string>
    <string name="courierEmail">Courier Email</string>
    <string name="courierEntry">Courier</string>
    <string name="visitorEntry">Visitor</string>
    <string name="visitorDetail">Visitor Details</string>
    <string name="vehicleEntry">Vehicle</string>
    <string name="gatePassEntry">Gate Pass</string>
    <string name="userManagement">User Management</string>
    <string name="report">Report</string>
    <string name="masterList">Master List</string>
    <string name="setting1">Settings</string>
    <string name="MasterCourier">Master Courier</string>
    <string name="emp">Emp</string>
    <string name="Iomin">IMO IN</string>
    <string name="courierInward">Courier Inward</string>
    <string name="employeein">Employee Inward</string>
    <string name="employeeout">Employee Outward</string>
    <string name="MasterVehicle">Master Vehicle</string>
    <string name="MasterVehicleList">Vehicle List</string>
    <string name="MasterEmployeeList">Employee</string>
    <string name="UserManagelist">User Management List</string>
    <string name="MasterCourierList">Courier List</string>
    <string name="courierOutward">Courier Outward</string>
    <string name="courierList">Courier List</string>
    <string name="gatePassList">GatePass List</string>
    <string name="visitor">Visitor In</string>
    <string name="Visitor">Visitor</string>
    <string name="master">Vehicle In</string>
    <string name="Vehicle_out">Vehicle Out</string>
    <string name="material_in">Material In</string>
    <string name="material_out">Material Out</string>
    <string name="courierin">Courier In</string>
    <string name="iomin">Iom In</string>
    <string name="iomout">Iom Out</string>
    <string name="employee_in">Employee In</string>
    <string name="employee_out">Employee Out</string>
    <string name="courierout">Courier Out</string>
    <string name="gatepass">EMP Out</string>
    <string name="gatepassInward">Gate Pass Inward</string>
    <string name="gatepassOutward">Gate Pass Outward</string>
    <string name="vehicle">EMP In</string>
    <string name="employee_gate">Gatepass </string>
    <string name="employeegate">Gatepass </string>
    <string name="employee_gate_out">Gatepass Out</string>
    <string name="Vehicle">Vehicle</string>
    <string name="driver_details">Driver Details</string>
    <string name="Material">Material</string>
    <string name="Courier">Courier</string>
    <string name="Iom">Iom</string>
    <string name="vehicleSweetmsg">Vehicle</string>
    <string name="VehicleInward">Vehicle In</string>
    <string name="VehicleOutward">Vehicle Outward</string>
    <string name="VehicleList">Vehicle List</string>
    <string name="courier_count">9</string>
    <string name="visitto">Visit TO</string>
    <string name="visitor_count">2</string>
    <string name="gatpass_count">3</string>
    <string name="vechile_count">4</string>
    <string name="title_activity_home_navigate">Home</string>
    <string name="date">Date</string>
    <string name="dcdate">DC Date</string>
    <string name="dcDetails">DC Details</string>
    <string name="passno">PassNo</string>
    <string name="dateandtime">Date and Time</string>
    <string name="abc">ABCsdfdfgdfgdffdsfhkhdskfksksdvvbkdsakvasvasdvasdva</string>
    <string name="meetto">Meet To</string>
    <string name="taprfidcard">TAP RFID CARD</string>
    <string name="document">Document</string>
    <string name="photo">Photo</string>
    <string name="addvehicle">Add Vehicle</string>
    <string name="printpass">Print Pass</string>
    <string name="noofperson">No of Person</string>
    <string name="address">Address</string>
    <string name="licensenum">License Number</string>
    <string name="newVisitor">New Visitor</string>
    <string name="Upcomingvisitor">Upcoming Visitor</string>
    <string name="visitpurpose">Visit Purpose</string>
    <string name="couriercode">Courier Code</string>
    <string name="sendername">Sender Name</string>
    <string name="receivername">Receiver Name</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="inwardentry">Inward Entry</string>
    <string name="courierPassNo">Courier Pass No</string>
    <string name="courierCompany">Courier Company</string>
    <string name="mcourierCompany">Courier Company *</string>
    <string-array name="selectCourier">
        <item name="selectcourier">Choose Company</item>
        <item name="profesional">Professional</item>
        <item name="speed">Speed</item>
        <item name="couriere">Couriers</item>
    </string-array>
    <string name="addcourierCompany">+</string>
    <string name="courierForm">Courier From :</string>
    <string name="entercompanyname">Company Name</string>
    <string name="companyName">Company Name *</string>
    <string name="enterpersonname">Person Name</string>
    <string name="persionName">Person Name *</string>
    <string name="enterplace">Place</string>
    <string name="place">Place</string>
    <string name="courierTo">Courier To :</string>
    <string name="from">From : </string>
    <string name="deptdesign">DeptName ( Designation )</string>
    <string name="to">To : </string>
    <string name="enterdeptname">Department Name</string>
    <string name="depertmentName">Department Name</string>
    <string name="outwardentry">Outward Entry</string>
    <string name="senderinfo">Sender Info :</string>
    <string name="employee">Employee</string>
    <string name="employeeName">Employee Name</string>
    <string name="usertype">User Type</string>
    <string name="courierpassno">Courier Pass No</string>
    <string name="employeeNo">Employee Number</string>
    <string name="visitorSetting">Visitor setting</string>
    <string name="nodatafound">No data Found</string>
    <string name="msendthrough">Send Through *</string>
    <string name="awbtracking">AWB Tracking Number</string>
    <string name="trackingno">Tracking number</string>
    <string name="receiverinfo">Receiver Info :</string>
    <string name="enterawttracking">Tracking Number</string>
    <string name="unitname">Unit Name</string>
    <string name="gatenumber">Gate Number</string>
    <string name="gatename">Gate Name</string>
    <string name="userrole">User Role</string>
    <string name="username">User Name</string>
    <string-array name="selectgate">
        <item name="selectgate">Choose Gate</item>
        <item name="gate1">GATE 1</item>
        <item name="gate2">GATE 2</item>
        <item name="gate3">GATE 3</item>
        <item name="gate4">GATE 4</item>
    </string-array>
    <string name="selectUnit">Select Unit</string>
    <string name="unit">Select Unit</string>
    <string name="userrolestatus">UserRole Status</string>
    <string name="itemusername">User Name</string>
    <string-array name="status">
        <item name="active">Active</item>
        <item name="inactive">Inactive</item>
    </string-array>
    <string name="password">Password *</string>
    <string name="producttype">Product Type</string>
    <string name="Password">Password </string>
    <string name="couriercmpyName">Courier Company</string>
    <string name="courieraddress">Courier Address</string>
    <string name="conformpassword">Conform Password *</string>
    <string name="Conformpassword">Conform Password </string>
    <string-array name="selectunit">
        <item name="selectunit">Choose Unit</item>
        <item name="unit1">UNIT 1</item>
        <item name="unit2">UNIT 2</item>
        <item name="unit3">UNIT 3</item>
        <item name="unit4">UNIT 4</item>
    </string-array>
    <string name="enteruserrole">Enter User Role</string>
    <string name="enterusername">Enter User Name</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enterCompanyId">Enter Company ID</string>
    <string name="enterCompanyName">Enter Company Name</string>
    <string name="enterMobileNo">Enter Mobile Number</string>
    <string name="enterconformpassword">Renter Password</string>
    <string name="scompanyName">Company Name </string>
    <string name="search">Search</string>
    <string name="digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 </string>
    <string name="digits_email">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@. </string>
    <string name="admin">Admin</string>
    <string name="welcome">Welcome</string>
    <string name="forgetPassword">Forget password?</string>
    <string name="login">Login</string>
    <string name="notYet">Not yet register?</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
</resources>