<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/cardViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_28dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circular_bg">

        <ImageView
            android:id="@+id/companyLogo"
            android:layout_width="@dimen/size_100dp"
            android:layout_height="@dimen/size_100dp"
            android:src="@drawable/splash_img"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_5dp"
        android:layout_below="@id/cardViewLogo"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_18dp" />

        <TextView
            android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="@dimen/size_5dp"
            android:textSize="@dimen/size_20dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutWelcome"
        android:layout_marginLeft="@dimen/size_30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/size_30dp"
        android:background="@color/loginbackcolor"
        app:cardCornerRadius="@dimen/size_10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginBottom="@dimen/size_20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderblack"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/size_5dp"
                    android:background="@color/transparent"
                    android:digits="@string/digits_email"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:maxLength="@integer/int_10"
                    android:paddingLeft="@dimen/size_12dp"
                    android:singleLine="true"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/size_12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:text="@string/hint_email"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/size_10dp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:background="@drawable/borderblack"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/pins"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/int_1"
                    android:background="@android:color/transparent"
                    android:digits="@string/digits"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:maxLength="@integer/int_15"
                    android:paddingLeft="@dimen/size_12dp"
                    android:singleLine="true"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/size_12dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_weight="@integer/int_100"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/logein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/int_50"
                    android:background="@drawable/button_background_60"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:layout_weight="@integer/int_50"
                    android:visibility="gone"
                    android:text="@string/forgetPassword" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_20dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbVisitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/admin"
                    android:textColor="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/rbEmployee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/employee"
                    android:textColor="@color/colorPrimary" />



            </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textViewBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/logoBlue"
        android:textStyle="bold"
        android:textSize="@dimen/size_12dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:text="@string/notYet"
        android:layout_below="@+id/cardviewlayout"
        tools:ignore="UnknownId" />
</RelativeLayout>
