<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".activity.MainActivity">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutWelcome"
            android:layout_marginLeft="@dimen/size_30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/size_30dp"
            android:background="@color/loginbackcolor"
            app:cardCornerRadius="@dimen/size_10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_marginRight="@dimen/size_20dp"
                android:layout_marginBottom="@dimen/size_20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderblack"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/source"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/size_5dp"
                        android:background="@color/transparent"
                        android:hint="@string/source"
                        android:inputType="text"
                        android:paddingLeft="@dimen/size_12dp"
                        android:singleLine="true"
                        android:textColor="@color/darkGray"
                        android:textSize="@dimen/size_12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="@dimen/size_10dp"
                        android:text="@string/hint_email"
                        android:textColor="@color/darkGray"
                        android:textSize="@dimen/size_10dp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_20dp"
                    android:background="@drawable/borderblack"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/destination"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="@integer/int_1"
                        android:background="@android:color/transparent"
                        android:hint="@string/destination"
                        android:inputType="text"
                        android:paddingLeft="@dimen/size_12dp"
                        android:singleLine="true"
                        android:textColor="@color/darkGray"
                        android:textSize="@dimen/size_12dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_20dp"
                    android:layout_weight="@integer/int_100"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/logein"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="@integer/int_50"
                        android:background="@drawable/button_background_60"
                        android:gravity="center"
                        android:text="@string/search"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/size_10dp"
                        android:layout_weight="@integer/int_50"
                        android:visibility="gone"
                        android:text="@string/forgetPassword" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/size_20dp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbVisitor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/admin"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/rbEmployee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/employee"
                        android:textColor="@color/colorPrimary" />



                </RadioGroup>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


</RelativeLayout>